# SpecialMetronomeHighPrecision

./: CMakeLists.txt  MetronomeHighPrecision  MetronomeHighPrecision_step5  MetronomePrecision_step4  README.md  SamplesPerBeat_step1  Simple_Metronome_Step3  SpecialMetronomeHigPrecisionTimeSignature-Rtaudio_step6  SpecialMetronomeHighPrecision-Rtaudio_step6  SpecialMetronomeStep8_CalibrationRtaudio  Step_9: JUCE Integration  Timer_Progress_Step2  WorkingInProcess_step7  h origin recovered-work  main.cpp  step_9 : Mobile Engine Port (WIP)
